sửa lại một số thông tin và xong chức năng thêm sửa xóa cho giỏ hàng (cần kiểm tra lại)